Fixed image in about page getting squished

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -350,13 +350,10 @@ section.home-container
 			+shift(1)
 
 	img
-		height: 360px
+		height: auto
 		width: 500px
 		margin: 0 auto $single-bottom-padding
 		border-radius: $border-radius
-
-		@media screen and (max-width: 767px)
-			width: auto
 
 	.-bio
 		text-align: left
